tests/functional2/lang/parser-merge-attrs/parse-fail-err2.err.exp
error: attribute 'y' already defined at /pwd/in.nix:3:9
       at /pwd/in.nix:2:3:
            1| {
            2|   x.y.y = 3;
             |   ^
            3|   x = { y.y= 3; z = 3; };
